--- a/lab4/README
+++ b/lab4/README
@@ -1,6 +1,6 @@
-Setting up ssh for the edison
+SETTING UP THE EDISON
 ls /dev/cu.usbserial-*
-screen /dev/cu.usbserial-XXXXXXXX 115200
+screen /dev/cu.usbserial-AL0066JN 115200
 hit enter twice to login
 enter password
 configure_edison --wifi
@@ -9,3 +9,10 @@ vivek@ucla.edu
 enter password
 configure_edison --showWiFiIP
 ssh root@ip
+
+sample_log.txt - My sample log out put from running my program until the server told it to shut off
+
+My implementation polls the socket before taking a reading to see if there are any pending updates,
+if there are it applies them to the current reading. The one exception is frequency, which it applies
+to the next reading because it has already slept as many seconds as the previous frequency before
+getting this update.
